styles/globals.scss
@font-face {
  font-family: "Inter var";
  font-style: normal;
  font-weight: 100 900;
  font-display: block;
  src: url(/fonts/Inter-roman.var.woff2) format("woff2");
}
@font-face {
  font-family: "Inter var";
  font-style: italic;
  font-weight: 100 900;
  font-display: block;
  src: url(/fonts/Inter-italic.latin.var.woff2) format("woff2");
  font-named-instance: "Italic";
}

$maximum-width: 660px;

// :root {
//   --maximum-width: $maximum-width;
// }

body {
  font-family: "Inter var", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  -webkit-font-smoothing: subpixel-antialiased;
  font-feature-settings: "case" 1, "cpsp" 1, "dlig" 1, "cv01" 1, "cv02",
    "cv03" 1, "cv04" 1;
  font-variation-settings: "wght" 450;
  font-variant: common-ligatures contextual;
  letter-spacing: -0.02em;
  background-color: #f8f8ff;
  padding: 0;
  margin: 0;
}
b,
strong,
h3,
h4,
h5,
h6 {
  font-variation-settings: "wght" 650;
}
h1 {
  font-variation-settings: "wght" 850;
  line-height: 2.5rem;
}
h2 {
  font-variation-settings: "wght" 750;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  font-style: italic;
}

table {
  border: 3px solid black;
  padding: 1rem;
}

@media screen and (min-device-pixel-ratio: 1.5),
  screen and (min-resolution: 1.5dppx) {
  body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

details summary {
  cursor: pointer;
}

code:not(.code-highlight) {
  background-color: #eee;
  border: 1px solid #ccc;
  padding: 3px;
  border-radius: 5px;
}

img.next-image {
  margin: 0;
}

time {
  font-size: 80%;
}

.nav-line .nav-link {
  color: #69778c;
}

.container {
  max-width: $maximum-width;
  padding: 0 2rem;
}

.prose {
  font-size: 1rem;
  line-height: 1.75;

  a {
    color: #0074de;
  }
}

.profile-picture {
  border-radius: 50%;
  max-width: 200px;
  /* box-shadow: 0 0 0 3px white, 0 0 0 6px #ddd, 0 0 0 9px white; */
  background-color: #eee;
  box-sizing: border-box;
  /* margin-left: 60vw; */
  /* margin-bottom: -120px; */
}
.profile-picture-border {
  border-radius: 50%;
  box-shadow: 0 0 0 3px white, 0 0 0 4px #ddd, 0 0 0 9px white;
  max-width: 200px;
  max-height: 200px;
}

.hero {
  min-height: 300px;
  padding: 3rem;
  display: flex;
  justify-content: center;
  width: var();
}
.hero-container {
  display: flex;
  align-items: center;
  max-width: $maximum-width;
  flex-wrap: wrap-reverse;
  justify-content: center;
}
.hero-image {
  transform: skew(0, 0);
  // flex-basis: 40%;
  transition: 0.3s transform;

  &:hover {
    transform: rotate3d(-1, 1, 0.3, 30deg);
  }
}
.hero-content {
  text-align: center;
}
@media screen and (min-width: $maximum-width) {
  .hero-container {
    justify-content: space-between;
  }
  .hero-content {
    // flex-basis: 60%;
    max-width: 60%;
    text-align: left;
  }
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 3rem;
}

.main {
  max-width: $maximum-width;
  margin: 0 auto;
}

.post-modified-date,
.post-create-date,
.post-tags {
  font-size: 0.9rem;
  color: rgb(113, 128, 150);
}

.post-item-more {
  text-transform: uppercase;
  font-size: 75%;
}

.alert {
  padding: 10px;
}
.alert-primary {
  border: 1px solid #0074de;
  background-color: #9ec3eb;
  border-radius: 5px;
}

.tech-logos {
  position: relative;
  display: flex;
  // justify-content: space-between;
  flex-wrap: wrap;
}

.tech-description {
  position: absolute;
  transform: translateY(-120%);
  margin-top: -10px;
  margin: -10px 10px 10px 10px;
  background: #000;
  color: #fff;
  line-height: 1.5;
  padding: 20px;
  border-radius: 10px;
}

.tech-tooltip {
  // position: relative; /* making the .tooltip span a container for the tooltip text */

  svg {
    transition: 0.3s transform;
    margin: 10px;
  }

  svg:hover {
    transform: scale3d(1.5, 1.5, 1.5) rotate3d(1, 1, 0.5, 30deg);
    transition: 0.3s transform;
  }
  &:hover:before {
    opacity: 1;
  }

  &:before {
    content: attr(data-text); /* here's the magic */
    position: absolute;

    transform: translateY(-130%);
    // margin-top: -10px;

    /* move to right */
    left: 0;

    /* basic styles */
    // width: 400px;
    padding: 20px;
    margin: 10px;
    border-radius: 10px;
    background: #000;
    color: #fff;
    text-align: left;
    line-height: 1.5;

    opacity: 0;
    transition: 0.3s opacity;
  }

  // &:after {
  //   content: "";
  //   position: absolute;

  //   /* position tooltip correctly */
  //   left: 50%;
  //   margin-left: -10px;
  //   top: -10px;

  //   /* the arrow */
  //   border: 10px solid #000;
  //   border-color: black transparent transparent transparent;

  //   opacity: 0;
  //   transition: 0.3s opacity;
  // }

  // &:hover:before,
  // &:hover:after {
  //   opacity: 1;
  // }
}

.project-summary {
  column-count: 2;
  column-width: 12rem;
}
.company-name {
  margin-bottom: 10px;
}
.position-title {
  font-size: 70%;
  font-weight: 100;
  display: inline-block;
}
.position-date-range {
  // font-size: 70%;
  margin-top: 0;
}

.vertical-timeline-element-content li {
  padding: 0.2rem 0;
}
.vertical-timeline-element-content details {
  padding: 0.2rem 0;
}
.name {
  background-image: linear-gradient(176deg, #0700b8 0%, #00ff88 100%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}
.site-navigation {
  max-width: $maximum-width;
  margin: 0 auto;
  display: flex;
  justify-content: flex-end;
  font-size: 90%;

  ul li {
    list-style-type: none;
    display: inline-block;
  }
  a {
    display: block;
    margin: 0.5rem;
    text-decoration: none;
    border-bottom: 1px solid transparent;
    color: #444;
  }
  a:hover {
    border-bottom: 1px solid #000;
  }
}

